[gd_scene load_steps=19 format=2]

[ext_resource path="res://wheel/wheel.png" type="Texture" id=1]
[ext_resource path="res://wheel/arrow.png" type="Texture" id=2]
[ext_resource path="res://wheel/Wheel.gd" type="Script" id=3]
[ext_resource path="res://wheel/gauge.png" type="Texture" id=4]
[ext_resource path="res://wheel/gauge_mask.png" type="Texture" id=5]
[ext_resource path="res://wheel/Gauge.gd" type="Script" id=6]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 0.0298462, -194.813 )
b = Vector2( 136.521, -136.726 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 136.726, 136.521 )
b = Vector2( 194.813, 0.0299072 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( -136.521, 136.726 )
b = Vector2( -0.0298462, 194.813 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( -184, 64 )
b = Vector2( -174, -84 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 195.47, -1.85901 )
b = Vector2( 136.521, -136.726 )

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( 136.726, 136.521 )
b = Vector2( -0.0298462, 194.813 )

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( -194.813, -0.0297852 )
b = Vector2( -136.521, 136.726 )

[sub_resource type="SegmentShape2D" id=8]
a = Vector2( -136.726, -136.521 )
b = Vector2( 0.0298462, -194.813 )

[sub_resource type="Animation" id=9]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath("Gauge/Button:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
resource_name = "disappear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gauge/Button:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=11]
resource_name = "hide_mutation"
tracks/0/type = "value"
tracks/0/path = NodePath("MutationDisplay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MutationDisplay:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("MutationDisplay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MutationDisplay:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="WheelScreen" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Background" type="Polygon2D" parent="."]
position = Vector2( 1016, 584 )
scale = Vector2( 2, 2 )
color = Color( 0.105882, 0.105882, 0.105882, 0.768627 )
polygon = PoolVector2Array( -520, -308, 15, -298, 7, 14, -517, 21 )

[node name="Wheel" type="RigidBody2D" parent="."]
position = Vector2( 512, 300 )
rotation = -0.33489
gravity_scale = 0.0
angular_damp = 3.0

[node name="Sprite" type="Sprite" parent="Wheel"]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Red" type="StaticBody2D" parent="Wheel"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/Red"]
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Wheel/Red"]
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Wheel/Red"]
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Wheel/Red"]
rotation = 0.33489
shape = SubResource( 4 )

[node name="Blue" type="StaticBody2D" parent="Wheel"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/Blue"]
position = Vector2( -0.657349, 1.88892 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Wheel/Blue"]
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Wheel/Blue"]
shape = SubResource( 7 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Wheel/Blue"]
shape = SubResource( 8 )

[node name="Ray" type="RayCast2D" parent="."]
position = Vector2( 518, 82 )
enabled = true
cast_to = Vector2( 0, 60 )
__meta__ = {
"_edit_group_": true
}

[node name="ArrowSprite" type="Sprite" parent="Ray"]
position = Vector2( 0, 16 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Gauge" type="Node2D" parent="."]
position = Vector2( 600, 486 )
scale = Vector2( 4, 4 )
script = ExtResource( 6 )

[node name="Border" type="Sprite" parent="Gauge"]
texture = ExtResource( 4 )

[node name="LineMask" type="Light2D" parent="Gauge"]
texture = ExtResource( 5 )
mode = 3
range_layer_min = 10
range_layer_max = 10
range_item_cull_mask = 1024

[node name="LineMeter" type="Line2D" parent="Gauge"]
light_mask = 1024
position = Vector2( -19.5, -0.5 )
points = PoolVector2Array( 0, 0, 39, 0 )
width = 25.0
default_color = Color( 0.921569, 0.709804, 0.0705882, 1 )

[node name="Button" type="Button" parent="Gauge"]
margin_left = 23.5
margin_top = -11.5
margin_right = 62.5
margin_bottom = 11.5
text = "Spin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anim" type="AnimationPlayer" parent="."]
anims/appear = SubResource( 9 )
anims/disappear = SubResource( 10 )
anims/hide_mutation = SubResource( 11 )
anims/show_mutation = SubResource( 12 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )

[node name="MutationDisplay" type="CenterContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="VBoxContainer" parent="MutationDisplay"]
margin_left = 433.0
margin_top = 263.0
margin_right = 591.0
margin_bottom = 337.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutationName" type="Label" parent="MutationDisplay/Layout"]
margin_right = 158.0
margin_bottom = 14.0
text = "Mutation Name"
align = 1

[node name="MutationDescription" type="Label" parent="MutationDisplay/Layout"]
margin_top = 18.0
margin_right = 158.0
margin_bottom = 32.0
text = "Description"
align = 1

[node name="MutationBinding" type="Label" parent="MutationDisplay/Layout"]
margin_top = 36.0
margin_right = 158.0
margin_bottom = 50.0
text = "Bound to M1"
align = 1

[node name="GridContainer" type="GridContainer" parent="MutationDisplay/Layout"]
margin_top = 54.0
margin_right = 158.0
margin_bottom = 74.0
columns = 2

[node name="AgainButton" type="Button" parent="MutationDisplay/Layout/GridContainer"]
margin_right = 78.0
margin_bottom = 20.0
text = "Spin Again"

[node name="StartButton" type="Button" parent="MutationDisplay/Layout/GridContainer"]
margin_left = 82.0
margin_right = 158.0
margin_bottom = 20.0
text = "Start Fight"
[connection signal="gauge_released" from="Gauge" to="." method="_on_Gauge_gauge_released"]
[connection signal="button_down" from="Gauge/Button" to="Gauge" method="_on_Button_button_down"]
[connection signal="button_up" from="Gauge/Button" to="Gauge" method="_on_Button_button_up"]
[connection signal="pressed" from="MutationDisplay/Layout/GridContainer/AgainButton" to="." method="_on_AgainButton_pressed"]
[connection signal="pressed" from="MutationDisplay/Layout/GridContainer/StartButton" to="." method="_on_StartButton_pressed"]
